--- a/library.bib
+++ b/library.bib
@@ -1600,6 +1600,7 @@ Publisher: {JACoW} Publishing, Geneva, Switzerland},
 	isbn = {978-3-319-18316-9},
 	url = {http://link.springer.com/10.1007/978-3-319-18317-6},
 	series = {Graduate Texts in Physics},
+	pagetotal = {1025},
 	publisher = {Springer International Publishing},
 	author = {Wiedemann, Helmut},
 	urldate = {2021-01-20},
@@ -7237,19 +7238,19 @@ Section: Pure and Applied Chemistry},
 @unpublished{chauvin_longitudinal_2019,
 	location = {Université Paris-Saclay},
 	title = {Longitudinal Beam Dynamics, Part 2},
-	author = {Chauvin, Nicolas and Picho, Nicolas},
+	author = {Chauvin, Nicolas and Pichoff, Nicolas},
 	date = {2019},
 	langid = {english},
-	file = {Chauvin and Picho - 2019 - Longitudinal Beam Dynamics, Part 2.pdf:F\:\\My Drive\\References\\Zotero\\storage\\LPB6JGPC\\Chauvin and Picho - 2019 - Longitudinal Beam Dynamics, Part 2.pdf:application/pdf},
+	file = {Chauvin and Pichoff - 2019 - Longitudinal Beam Dynamics, Part 2.pdf:F\:\\My Drive\\References\\Zotero\\storage\\LPB6JGPC\\Chauvin and Pichoff - 2019 - Longitudinal Beam Dynamics, Part 2.pdf:application/pdf},
 }
 
 @unpublished{chauvin_longitudinal_2019-1,
 	location = {Université Paris-Saclay},
 	title = {Longitudinal Beam Dynamics, Part 1},
-	author = {Chauvin, Nicolas and Picho, Nicolas},
+	author = {Chauvin, Nicolas and Pichoff, Nicolas},
 	date = {2019},
 	langid = {english},
-	file = {Chauvin and Picho - 2019 - Longitudinal Beam Dynamics, Part 1.pdf:F\:\\My Drive\\References\\Zotero\\storage\\IRIJCB86\\Chauvin and Picho - 2019 - Longitudinal Beam Dynamics, Part 1.pdf:application/pdf},
+	file = {Chauvin and Pichoff - 2019 - Longitudinal Beam Dynamics, Part 1.pdf:F\:\\My Drive\\References\\Zotero\\storage\\IRIJCB86\\Chauvin and Pichoff - 2019 - Longitudinal Beam Dynamics, Part 1.pdf:application/pdf},
 }
 
 @unpublished{migliorati_space_2020,
@@ -8580,7 +8581,7 @@ Publisher: {CERN}},
 	urldate = {2021-07-09},
 	date = {1905},
 	langid = {german},
-	file = {Einstein - 1905 - Über die von der molekularkinetischen Theorie der .pdf:F\:\\My Drive\\References\\Zotero\\storage\\TXGGZUZK\\Einstein - 1905 - Über die von der molekularkinetischen Theorie der .pdf:application/pdf},
+	file = {Einstein - 1905 - Über die von der molekularkinetischen Theorie der .pdf:F\:\\My Drive\\References\\Zotero\\storage\\TXGGZUZK\\Einstein - 1905 - Über die von der molekularkinetischen Theorie der .pdf:application/pdf;1807.02557.pdf:F\:\\My Drive\\References\\Zotero\\storage\\MWYYNULC\\1807.02557.pdf:application/pdf},
 }
 
 @article{einstein_electrodynamics_1905,
@@ -8672,4 +8673,178 @@ Publisher: {CERN}},
 	date = {2018-12-13},
 	langid = {english},
 	file = {Migliorati et al. - 2018 - Instability studies at the CERN Proton Synchrotron.pdf:F\:\\My Drive\\References\\Zotero\\storage\\259QGE6X\\Migliorati et al. - 2018 - Instability studies at the CERN Proton Synchrotron.pdf:application/pdf},
+}
+
+@article{guralnik_global_nodate,
+	title = {Global Conservation Laws and Massless Particles},
+	pages = {3},
+	author = {Guralnik, G S and Hagen, C R and Kibble, T W B},
+	langid = {english},
+	file = {Guralnik et al. - Global Conservation Laws and Massless Particles.pdf:F\:\\My Drive\\References\\Zotero\\storage\\28HYXKE8\\Guralnik et al. - Global Conservation Laws and Massless Particles.pdf:application/pdf},
+}
+
+@article{englert_broken_1964,
+	title = {Broken Symmetry and the Mass of Gauge Vector Mesons},
+	volume = {13},
+	issn = {0031-9007},
+	url = {https://link.aps.org/doi/10.1103/PhysRevLett.13.321},
+	doi = {10.1103/PhysRevLett.13.321},
+	pages = {321--323},
+	number = {9},
+	journaltitle = {Physical Review Letters},
+	shortjournal = {Phys. Rev. Lett.},
+	author = {Englert, F. and Brout, R.},
+	urldate = {2021-08-29},
+	date = {1964-08-31},
+	langid = {english},
+	file = {Englert and Brout - 1964 - Broken Symmetry and the Mass of Gauge Vector Meson.pdf:F\:\\My Drive\\References\\Zotero\\storage\\ML8AGS2V\\Englert and Brout - 1964 - Broken Symmetry and the Mass of Gauge Vector Meson.pdf:application/pdf},
+}
+
+@article{higgs_broken_1964,
+	title = {Broken Symmetries and the Masses of Gauge Bosons},
+	volume = {13},
+	issn = {0031-9007},
+	url = {https://link.aps.org/doi/10.1103/PhysRevLett.13.508},
+	doi = {10.1103/PhysRevLett.13.508},
+	pages = {508--509},
+	number = {16},
+	journaltitle = {Physical Review Letters},
+	shortjournal = {Phys. Rev. Lett.},
+	author = {Higgs, Peter W.},
+	urldate = {2021-08-29},
+	date = {1964-10-19},
+	langid = {english},
+	file = {Higgs - 1964 - Broken Symmetries and the Masses of Gauge Bosons.pdf:F\:\\My Drive\\References\\Zotero\\storage\\Q99XKA6G\\Higgs - 1964 - Broken Symmetries and the Masses of Gauge Bosons.pdf:application/pdf},
+}
+
+@book{budyko_climate_1974,
+	location = {New York},
+	title = {Climate and life},
+	isbn = {978-0-12-139450-9},
+	series = {International geophysics series},
+	pagetotal = {508},
+	number = {18},
+	publisher = {Academic Press},
+	author = {Budyko, M. I.},
+	date = {1974},
+	langid = {english},
+	keywords = {Bioclimatology, Climatology, Heat budget (Geophysics)},
+	file = {Budyko - 1974 - Climate and life.pdf:F\:\\My Drive\\References\\Zotero\\storage\\FK7AQ2CJ\\Budyko - 1974 - Climate and life.pdf:application/pdf},
+}
+
+@article{budyko_effect_1969,
+	title = {The effect of solar radiation variations on the climate of the Earth},
+	volume = {21},
+	issn = {00402826, 21533490},
+	url = {http://tellusa.net/index.php/tellusa/article/view/10109},
+	doi = {10.1111/j.2153-3490.1969.tb00466.x},
+	abstract = {It follows from the analysis of observation data that the secular variation of the mean temperature of the Earth can be explained by the variation of short-wave radiation, arriving at the surface of the Earth. In connection with this, the influence of long-term changes of radiation, caused by variations of atmospheric transparency on the thermal regime is being studied. Taking into account the influence of changes of planetary albedo of the Earth under the development of glaciations on the thermal regime, it is found that comparatively small variations of atmospheric transparency could be sufficient for the development of quaternary glaciations.},
+	pages = {611--619},
+	number = {5},
+	journaltitle = {Tellus},
+	author = {Budyko, M. I.},
+	urldate = {2021-08-29},
+	date = {1969-10},
+	langid = {english},
+	file = {Budyko - 1969 - The effect of solar radiation variations on the cl.pdf:F\:\\My Drive\\References\\Zotero\\storage\\SX3JUZ35\\Budyko - 1969 - The effect of solar radiation variations on the cl.pdf:application/pdf},
+}
+
+@article{caplan_elasticity_2018,
+	title = {The Elasticity of Nuclear Pasta},
+	volume = {121},
+	issn = {0031-9007, 1079-7114},
+	url = {http://arxiv.org/abs/1807.02557},
+	doi = {10.1103/PhysRevLett.121.132701},
+	abstract = {The elastic properties of neutron star crusts are relevant for a variety of currently observable or near-future electromagnetic and gravitational wave phenomena. These phenomena may depend on the elastic properties of nuclear pasta found in the inner crust. We present large scale classical molecular dynamics simulations where we deform nuclear pasta. We simulate idealized samples of nuclear pasta and describe their breaking mechanism. We also deform nuclear pasta that is arranged into many domains, similar to what is known for the ions in neutron star crusts. Our results show that nuclear pasta may be the strongest known material, perhaps with a shear modulus of \$10{\textasciicircum}\{30\}{\textbackslash},{\textbackslash}text\{ergs/cm\}{\textasciicircum}3\$ and breaking strain greater than 0.1.},
+	pages = {132701},
+	number = {13},
+	journaltitle = {Physical Review Letters},
+	shortjournal = {Phys. Rev. Lett.},
+	author = {Caplan, M. E. and Schneider, A. S. and Horowitz, C. J.},
+	urldate = {2021-08-31},
+	date = {2018-09-24},
+	langid = {english},
+	eprinttype = {arxiv},
+	eprint = {1807.02557},
+	keywords = {Nuclear Theory},
+	file = {Caplan et al. - 2018 - The Elasticity of Nuclear Pasta.pdf:F\:\\My Drive\\References\\Zotero\\storage\\QDU8XBHH\\Caplan et al. - 2018 - The Elasticity of Nuclear Pasta.pdf:application/pdf},
+}
+
+@article{caplan_astromaterial_2017,
+	title = {Astromaterial Science and Nuclear Pasta},
+	volume = {89},
+	issn = {0034-6861, 1539-0756},
+	url = {http://arxiv.org/abs/1606.03646},
+	doi = {10.1103/RevModPhys.89.041002},
+	abstract = {We define `astromaterial science' as the study of materials in astronomical objects that are qualitatively denser than materials on earth. Astromaterials can have unique properties related to their large density, though they may be organized in ways similar to more conventional materials. By analogy to terrestrial materials, we divide our study of astromaterials into hard and soft and discuss one example of each. The hard astromaterial discussed here is a crystalline lattice, such as the Coulomb crystals in the interior of cold white dwarfs and in the crust of neutron stars, while the soft astromaterial is nuclear pasta found in the inner crusts of neutron stars. In particular, we discuss how molecular dynamics simulations have been used to calculate the properties of astromaterials to interpret observations of white dwarfs and neutron stars. Coulomb crystals are studied to understand how compact stars freeze. Their incredible strength may make crust "mountains" on rotating neutron stars a source for gravitational waves that the Laser Interferometer Gravitational-Wave Observatory ({LIGO}) may detect. Nuclear pasta is expected near the base of the neutron star crust at densities of \$10{\textasciicircum}\{14\}\$ g/cm\${\textasciicircum}3\$. Competition between nuclear attraction and Coulomb repulsion rearranges neutrons and protons into complex non-spherical shapes such as sheets (lasagna) or tubes (spaghetti). Semi-classical molecular dynamics simulations of nuclear pasta have been used to study these phases and calculate their transport properties such as neutrino opacity, thermal conductivity, and electrical conductivity. Observations of neutron stars may be sensitive to these properties, and can be be used to interpret observations of supernova neutrinos, magnetic field decay, and crust cooling of accreting neutron stars. We end by comparing nuclear pasta shapes with some similar shapes seen in biological systems.},
+	pages = {041002},
+	number = {4},
+	journaltitle = {Reviews of Modern Physics},
+	shortjournal = {Rev. Mod. Phys.},
+	author = {Caplan, M. E. and Horowitz, C. J.},
+	urldate = {2021-08-31},
+	date = {2017-10-23},
+	langid = {english},
+	eprinttype = {arxiv},
+	eprint = {1606.03646},
+	keywords = {Condensed Matter - Soft Condensed Matter, Nuclear Theory, Astrophysics - High Energy Astrophysical Phenomena, Condensed Matter - Materials Science},
+	file = {Caplan and Horowitz - 2017 - Astromaterial Science and Nuclear Pasta.pdf:F\:\\My Drive\\References\\Zotero\\storage\\ABBKJ9JR\\Caplan and Horowitz - 2017 - Astromaterial Science and Nuclear Pasta.pdf:application/pdf},
+}
+
+@article{caplan_thermal_2021,
+	title = {Thermal fluctuations in nuclear pasta},
+	volume = {103},
+	issn = {2469-9985, 2469-9993},
+	url = {https://link.aps.org/doi/10.1103/PhysRevC.103.055810},
+	doi = {10.1103/PhysRevC.103.055810},
+	pages = {055810},
+	number = {5},
+	journaltitle = {Physical Review C},
+	shortjournal = {Phys. Rev. C},
+	author = {Caplan, M. E. and Forsman, C. R. and Schneider, A. S.},
+	urldate = {2021-08-31},
+	date = {2021-05-13},
+	langid = {english},
+	file = {Caplan et al. - 2021 - Thermal fluctuations in nuclear pasta.pdf:F\:\\My Drive\\References\\Zotero\\storage\\3T2UVULD\\Caplan et al. - 2021 - Thermal fluctuations in nuclear pasta.pdf:application/pdf},
+}
+
+@thesis{laut_longitudinal_2021,
+	title = {Longitudinal Space-Charge Effects of Transverse Motion in the {PS}},
+	institution = {Paris-Saclay University},
+	type = {phdthesis},
+	author = {Laut, Alexander},
+	date = {2021},
+	file = {Laut - 2021 - Longitudinal Space-Charge Effects of Transverse Mo.pdf:F\:\\My Drive\\References\\Zotero\\storage\\Q3EFZL4D\\Laut - 2021 - Longitudinal Space-Charge Effects of Transverse Mo.pdf:application/pdf},
+}
+
+@article{timko_benchmarking_2016,
+	title = {Benchmarking the Beam Longitudinal Dynamics Code {BLonD}},
+	abstract = {The relatively recent Beam Longitudinal Dynamics code {BLonD} has already been applied to a wide range of studies for all present {CERN} synchrotrons. Its application area ranges from studies of {RF} manipulations, over single and multi-bunch interactions with impedance, to the action of feedback loops and {RF} noise. In this paper, we present benchmarks and comparisons with measurements, theory, or other codes, which have increased greatly the trust in the code. Tests related to bunch-to-bucket transfer, feedback loops, diﬀusion due to noise injection, as well as collective eﬀects, are presented.},
+	pages = {4},
+	author = {Timko, H and Muller, J F Esteban and Müller, J F Esteban and Lasheen, A and Quartullo, D},
+	date = {2016},
+	langid = {english},
+	file = {Timko et al. - 2016 - Benchmarking the Beam Longitudinal Dynamics Code B.pdf:F\:\\My Drive\\References\\Zotero\\storage\\7QT7XE86\\Timko et al. - 2016 - Benchmarking the Beam Longitudinal Dynamics Code B.pdf:application/pdf},
+}
+
+@online{noauthor_cern_nodate,
+	title = {{CERN} Beam Longitudinal Dynamics code {BLonD}},
+	url = {https://blond.web.cern.ch/},
+}
+
+@article{panofsky_considerations_1956,
+	title = {Some Considerations Concerning the Transverse Deflection of Charged Particles in Radio‐Frequency Fields},
+	volume = {27},
+	issn = {0034-6748, 1089-7623},
+	url = {http://aip.scitation.org/doi/10.1063/1.1715427},
+	doi = {10.1063/1.1715427},
+	pages = {967--967},
+	number = {11},
+	journaltitle = {Review of Scientific Instruments},
+	shortjournal = {Review of Scientific Instruments},
+	author = {Panofsky, W. K. H. and Wenzel, W. A.},
+	urldate = {2021-09-03},
+	date = {1956-11},
+	langid = {english},
+	file = {Panofsky and Wenzel - 1956 - Some Considerations Concerning the Transverse Defl.pdf:F\:\\My Drive\\References\\Zotero\\storage\\UQERP4VC\\Panofsky and Wenzel - 1956 - Some Considerations Concerning the Transverse Defl.pdf:application/pdf},
 }
