--- a/main.tex
+++ b/main.tex
@@ -1,12 +1,12 @@
 \documentclass[a4paper]{report}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
-% \usepackage[margin=2.5cm]{geometry}
+\usepackage[margin=3cm]{geometry}
 
 \usepackage{csquotes}
 
-% \usepackage{fancyhdr}
-% \pagestyle{fancy}
+\usepackage{fancyhdr}
+\pagestyle{fancy}
 
 \usepackage{graphicx}
 \setkeys{Gin}{width=0.8\linewidth}
@@ -23,11 +23,13 @@
 \setlength\parindent{0pt}
 \setlength{\parskip}{10pt}
 
+\usepackage{xcolor}
+
 % ----- CONTENT ----- %
 
 \begin{document}
 
-% \include{title}
+\include{title}
 
 \tableofcontents
 % \listoffigures
