--- a/title.tex
+++ b/title.tex
@@ -3,7 +3,7 @@
     \vspace*{1cm}
         
     \Huge
-    \textbf{Longitudinal Space-Charge Effects of Transverse Motion in the PS}
+    \textbf{Effects of Betatron Motion on Longitudinal Space-Charge Impedancee}
         
     \vspace{0.5cm}
     \LARGE
@@ -43,7 +43,8 @@
 Particles in an intense bunch will experience longitudinal self-fields due to space-charge. This space charge effect, described by geometric factors dependent on a particle’s transverse position, beam size, and beam pipe aperture, is usually incorporated into longitudinal trackers on a per-turn basis by assuming particles are uniformly affected. Sampling from a 6D distribution in phase-space, a particle's transverse trajectories within a bunch will vary due to Betatron motion. A transverse tracker was developed to characterize the effective geometric factor of a given particle accounting for its transverse emittance, phase advance, and dispersion within a ring. A particle’s effective geometry factor is then estimated by interpolation without the need for transverse tracking. This variance in geometric factor due to transverse motion was incorporated into the longitudinal tracker BLonD, systematically affecting the synchrotron frequency distribution. The filamentation rate of a mismatched or perturbed longitudinal distribution was increased, which could suggest a stabilizing space-charge phenomenon.
 \end{abstract}
 
-\chapter*{Acknowledgements}
-\thispagestyle{empty}
+% \chapter*{Acknowledgements}
+% \thispagestyle{empty}
 
-I'd like to thank my supervisor Dr. Alexandre Lasheen for providing me this amazing opportunity to work at CERN and be extraordinarily accommodating to the many challenges faced during the COVID-19 pandemic. He provided substantial guidance throughout understanding the topic, and concisely acted as an excellent resource.
+% I'd like to thank my supervisor Dr. Alexandre Lasheen for providing me this amazing opportunity to work at CERN and be extraordinarily accommodating to the varoius challenges I faced moving between continents and countries during such a dynamic period in time. He was also an exquisite mentor and an excellent resource of learning for my studies, and an excellent peer who I enjoyed working with.
+% I'd like to thank the professors and administrators at Paris-Saclay University including Professor Sophie, Kazamias, Professor Guy Bonnaud, and Claude Rabot, for providing me logistical support and guidance for this stage in my academic career.
